-------

The major number changes for such things as code rewrites, changes in
syntax, and/or dramatic changes in functionality. The minor number
changes for corrections, enhancements, etc. made to the code. There
is no set schedule for releases.

--TODO--


--0.15--

   +	Requires LibSnert 1.70

   !	Conversion from Dns API to PDQ API.

   !	Use updated SPF API from libsnert that employs PDQ.

--0.14--

   +	Requires LibSnert 1.65

   +	Added spf-temp-error-dns option that was in the libsnert spf.c
	API, but forgot to add to the option table of the previous
	release.

--0.13--

   !	Disabling of blacklisting in the previous release was too
   	agressive and prevented whitelisting by Connect: tags.
   	Reported by Benji Spencer.

--0.12--

   +	Requires LibSnert 1.63

   !	See LibSnert change log for related DNS and SPF API fixes.

   +	access-db now supports socket-map, flat-file, and SQLite3
	lookups in addition to Berkeley DB. The SQLite3 behaviour
	can be disabled via LibSnert's ./configure script.

   !	Rejection based on access-db blacklisting now disabled. Some
	users prefer leaving blacklisting upto Sendmail and not the
	milter. Reported by Derek Balling and others.

--0.11--

  !!	License 1.4 which provides additional details with regards to
  	possible license controls used, the possibility of "phone
  	home code" and its general contents, and related privacy
  	statement.

   +	Add check for filterOpen() got NULL socket address pointer
	passed to filterOpen() which inidicates an unsupported address
	type. The connection is simply accepted to bypass the milter.

--0.10--

   +	Requires LibSnert 1.61

  !!	Complete replacement of option specification and no backwards.
	compatibility. The newer format allows for better integration
	of previously undocumented libsnert options and for the
	inclusion of future enhancements.

   !	filterClose(): remove reporting of "null workspace error",
	which can occur when a client connection is rejected before or