@@ -32,3 +32,4 @@ manual.shtml
 sample.mc
 startup.sh
 config.h
+configure.lineno
